# infraops

./: README.md  pyproject.toml
src/infraops/: main.py
src/infraops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/infraops/collectors/: cpu.py  filesystem.py  logs.py  memory.py  processes.py
src/infraops/commands/: health.py
src/infraops/reporters/: terminal.py
src/infraops/utils/: colors.py  status.py
