[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "infraops"
version = "0.1.0"
description = "Lightweight Linux operations toolkit"
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[project.scripts]
infraops = "infraops.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
